<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/category_display">

        <ListPreference
            android:key="color_mode"
            android:defaultValue="1"
            android:title="@string/color_modes_title"
            android:summary="@string/color_modes_summary"
            android:entries="@array/color_modes"
            android:entryValues="@array/color_modes_values"
            android:persistent="false" />

        <com.android.settings.device.ui.ColorTemperaturePreference
            android:key="color_temperature"
            android:defaultValue="128"
            android:title="@string/color_temperature_title"
            android:summary="@string/color_temperature_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_touchscreen">

        <SwitchPreference
            android:key="high_sensitivity_touch"
            android:title="@string/high_touch_sensitivity_title"
            android:summary="@string/high_touch_sensitivity_summary" />

    </PreferenceCategory>

</PreferenceScreen>